--- a/templates/lead-template.html
+++ b/templates/lead-template.html
@@ -1,17 +1,7 @@
-<div class='col-xs-6 col-sm-4'>
-    <p>
-        id: {{id}}
-    </p>
-    <p>
-        lead_name: {{lead_name}}
-    </p>
-    <p>
-        lead_phone: {{lead_phone}}
-    </p>
-    <p>
-        product_id: {{product_id}}
-    </p>
-    <p>
-        product_name: {{product_name}}
-    </p>
-</div>
+<tr> 
+    <td>{{id}}</td>
+    <td>{{lead_name}}</td>
+    <td>{{lead_phone}}</td>
+    <td>{{product_id}}</td>
+    <td>{{product_name}}</td>
+</tr>
