--- a/css/crm.css
+++ b/css/crm.css
@@ -24,10 +24,16 @@ h1 {
         margin: 0 auto;
       }
 
-.error {
-color: #e74c3c;
-}
-/* .input-description {
+.error
+      {
+              border-color:red;
+              border-style:solid;
+              border-width:1px;
+      }
+      
+      
+      
+      /* .input-description {
         width: 8%;
       } */
 
