--- a/css/crm.css
+++ b/css/crm.css
@@ -2,7 +2,7 @@
 	margin:0px;
         padding:0px;
         box-sizing: border-box;
-    }
+}
 
 body {  
         width: 95%; 
@@ -14,6 +14,7 @@ h1 {
         margin: 30px 0px;
 }
 
+
 .form-control {
         display: inline-block;
         width: 70%; 
@@ -22,19 +23,32 @@ h1 {
 #merkaz {
         width: 50%;
         margin: 0 auto;
-      }
+}
 
-.error
-      {
-              border-color:red;
-              border-style:solid;
-              border-width:1px;
-      }
-      
-      
-      
-      /* .input-description {
-        width: 8%;
-      } */
+#tblCUD td.title {
+        width: 20%;
+        margin-bottom: 5px;
+        font-weight: 700;
+}
+#tblCUD td.content {
+        width: 80%;
+        margin-bottom: 5px;
+}
+#tblCUD td.error-td {
+        width: 40%;
+        margin-bottom: 5px;
+}
 
+#tblCUD td {
+        border-top: none;
+}
+      
+#frmCUD label.error {
+        background:url("../images/error.gif") no-repeat 0px 0px;
+        padding-left: 16px;
+        padding-bottom: 2px;
+        font-weight: bold;
+        color: #EA5200;
+}
+            
 
