--- a/css/crm.css
+++ b/css/crm.css
@@ -14,28 +14,27 @@ h1 {
         margin: 30px 0px;
 }
 
-
 .form-control {
         display: inline-block;
-        width: 70%; 
+        width: auto; 
+        min-width: 60%;
 }
 
 #merkaz {
-        width: 50%;
         margin: 0 auto;
 }
 
 #tblCUD td.title {
-        width: 20%;
+        /* width: 12%; */
         margin-bottom: 5px;
         font-weight: 700;
 }
 #tblCUD td.content {
-        width: 80%;
+        /* width: 45%; */
         margin-bottom: 5px;
 }
 #tblCUD td.error-td {
-        width: 40%;
+        /* width: 43%; */
         margin-bottom: 5px;
 }
 
@@ -44,9 +43,11 @@ h1 {
 }
       
 #frmCUD label.error {
-        background:url("../images/error.gif") no-repeat 0px 0px;
-        padding-left: 16px;
-        padding-bottom: 2px;
+        background:url("../images/error.gif") no-repeat  left top;
+        /* background:url("../images/error.gif") no-repeat 0px 0px; */
+        /* padding-left: 16px; */
+        padding-left: 14px;
+        /* padding-bottom: 2px; */
         font-weight: bold;
         color: #EA5200;
 }
