--- a/templates/leads-table.html
+++ b/templates/leads-table.html
@@ -8,5 +8,5 @@
             <th class="text-center">Product Name</th>
         </tr>
     </thead>
-    <tbody class='leads'></tbody>
+    <tbody id='leads'></tbody>
 </table>
